# uddf2fit

./: .clang-format  .gitignore  .pre-commit-config.yaml  .typos.toml  pyproject.toml  setup.py
data/: mk3i.fit  mk3i.uddf
src/: uddf_3.2.3.xsd
src/garmin_fit_sdk_cxx/: CMakeLists.txt  Config.cmake.in
src/garmin_fit_sdk_cxx/include/garmin_fit_sdk/: fit.hpp  fit_aad_accel_features_mesg.hpp  fit_aad_accel_features_mesg_listener.hpp  fit_accelerometer_data_mesg.hpp  fit_accelerometer_data_mesg_listener.hpp  fit_accumulated_field.hpp  fit_accumulator.hpp  fit_activity_mesg.hpp  fit_activity_mesg_listener.hpp  fit_ant_channel_id_mesg.hpp  fit_ant_channel_id_mesg_listener.hpp  fit_ant_rx_mesg.hpp  fit_ant_rx_mesg_listener.hpp  fit_ant_tx_mesg.hpp  fit_ant_tx_mesg_listener.hpp  fit_aviation_attitude_mesg.hpp  fit_aviation_attitude_mesg_listener.hpp  fit_barometer_data_mesg.hpp  fit_barometer_data_mesg_listener.hpp  fit_beat_intervals_mesg.hpp  fit_beat_intervals_mesg_listener.hpp  fit_bike_profile_mesg.hpp  fit_bike_profile_mesg_listener.hpp  fit_blood_pressure_mesg.hpp  fit_blood_pressure_mesg_listener.hpp  fit_buffer_encode.hpp  fit_buffered_mesg_broadcaster.hpp  fit_buffered_record_mesg.hpp  fit_buffered_record_mesg_broadcaster.hpp  fit_buffered_record_mesg_listener.hpp  fit_cadence_zone_mesg.hpp  fit_cadence_zone_mesg_listener.hpp  fit_camera_event_mesg.hpp  fit_camera_event_mesg_listener.hpp  fit_capabilities_mesg.hpp  fit_capabilities_mesg_listener.hpp  fit_chrono_shot_data_mesg.hpp  fit_chrono_shot_data_mesg_listener.hpp  fit_chrono_shot_session_mesg.hpp  fit_chrono_shot_session_mesg_listener.hpp  (+234 more)
src/garmin_fit_sdk_cxx/src/: decode.cpp  encode.cpp  fit.cpp  fit_accumulated_field.cpp  fit_accumulator.cpp  fit_buffer_encode.cpp  fit_buffered_mesg_broadcaster.cpp  fit_buffered_record_mesg_broadcaster.cpp  fit_crc.cpp  fit_date_time.cpp  fit_decode.cpp  fit_developer_field.cpp  fit_developer_field_definition.cpp  fit_developer_field_description.cpp  fit_encode.cpp  fit_factory.cpp  fit_field.cpp  fit_field_base.cpp  fit_field_definition.cpp  fit_mesg.cpp  fit_mesg_broadcaster.cpp  fit_mesg_definition.cpp  fit_mesg_with_event_broadcaster.cpp  fit_profile.cpp  fit_protocol_validator.cpp  fit_unicode.cpp
src/garmin_fit_sdk_py/: LICENSE.txt  README.md  __init__.py  accumulator.py  bitstream.py  crc_calculator.py  decoder.py  fit.py  hr_mesg_utils.py  profile.py  stream.py  util.py
src/garmin_fit_sdk_py/tests/: __init__.py  data.py  data_expand_hr_mesgs.py  test_accumulator.py  test_bitstream.py  test_crc_calculator.py  test_decoder.py  test_hr_mesg_utils.py  test_stream.py  test_util.py
src/uddf2fit/: __init__.py
src/uddf2fit_cxx/: CMakeLists.txt  Config.cmake.in
src/uddf2fit_cxx/include/uddf2fit/: uddf2fit.hpp
src/uddf2fit_cxx/src/: uddf2fit.cpp
src/uddf_parser_cxx/: CMakeLists.txt  Config.cmake.in  main.cpp
src/uddf_parser_cxx/include/uddf2fit/: ID-fwd.hxx  ID.hxx  IDREF-fwd.hxx  IDREF.hxx  ID_TYPE-fwd.hxx  ID_TYPE.hxx  abundance-fwd.hxx  abundance.hxx  accommodationType-fwd.hxx  accommodationType.hxx  acknowledge-fwd.hxx  acknowledge.hxx  addressType-fwd.hxx  addressType.hxx  alarm-fwd.hxx  alarm.hxx  alarmType-fwd.hxx  alarmType.hxx  alcoholbeforedive-fwd.hxx  alcoholbeforedive.hxx  anysymptoms-fwd.hxx  anysymptoms.hxx  apparatus-fwd.hxx  apparatus.hxx  applicationdataType-fwd.hxx  applicationdataType.hxx  ascent-fwd.hxx  ascent.hxx  baseCalculationType-fwd.hxx  baseCalculationType.hxx  batterychargecondition-fwd.hxx  batterychargecondition.hxx  bottomtimetableType-fwd.hxx  bottomtimetableType.hxx  bottomtimetablescopeType-fwd.hxx  bottomtimetablescopeType.hxx  buddy-fwd.hxx  buddy.hxx  buehlmannType-fwd.hxx  buehlmannType.hxx  (+333 more)
src/uddf_parser_cxx/src/: ID.cxx  IDREF.cxx  ID_TYPE.cxx  abundance.cxx  accommodationType.cxx  acknowledge.cxx  addressType.cxx  alarm.cxx  alarmType.cxx  alcoholbeforedive.cxx  anysymptoms.cxx  apparatus.cxx  applicationdataType.cxx  ascent.cxx  baseCalculationType.cxx  batterychargecondition.cxx  bottomtimetableType.cxx  bottomtimetablescopeType.cxx  buddy.cxx  buehlmannType.cxx  builtType.cxx  business.cxx  calculatebottomtimetable.cxx  calculateprofile.cxx  calculatetable.cxx  cameraType.cxx  caveType.cxx  certificationType.cxx  contactType.cxx  currency.cxx  current.cxx  dateoftrip.cxx  dcalarmType.cxx  dcalarmWithDepthType.cxx  dcalarmWithTimeType.cxx  dcalarmtimeType.cxx  dcbuddydataType.cxx  dcdecomodelType.cxx  dcdivedepthalarmType.cxx  dcdivepo2alarmType.cxx  (+147 more)
src/uddf_parser_py/: __init__.py  main.py  uddf_3_2_3.py
tests/: conftest.py
